Nest classes properly